--- a/templates/home.html
+++ b/templates/home.html
@@ -278,7 +278,7 @@
                                 <div style="display: flex; align-items: center;">
                                     <input type="number" id="down-payment" name="down-payment">
                                     <select id="currency" name="currency">
-                                        <option value="3">BS</option>
+                                        <option value="3">Bs.S</option>
                                         <option value="2">COP</option>
                                         <option value="1">USD</option>
                                     </select>
