--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuarios - CopyNato</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/clients.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -102,21 +103,95 @@
         </div>
     </nav>
 
-<div class="modal-backdrop hidden"></div>
-        <div class="card-list-client">
-            {% for item in cliente %}
-            <a href="{{ url_for('client', client=item[0] )}}" style="text-decoration: none;" class="client-link">
-                <div class="card-client">
-                    <img src="../static/img/user-default.png" alt="User Image">
-                    <p class="default-client-name">{{item[0]}}</p>
-                    <p class="client-company">{{item[1]}}</p>
+    <section class="home">
+        <div class="home-header">
+            <div class="text">Clientes</div>
+            <button class="add-btn" type="button" id="openModal">
+                <span class="button__text">Añadir</span>
+                <span class="button__icon">
+                    <svg class="svg" fill="none" height="24" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <line x1="12" x2="12" y1="5" y2="19"></line>
+                        <line x1="5" x2="19" y1="12" y2="12"></line>
+                    </svg>
+                </span>
+            </button>
+        </div>
+<!-- Add Modal -->
+<div class="add-modal hidden" id="addModal">
+    <div class="add-modal-content">
+        <div class="form-section">
+            <div class="close-button" id="closeModal">
+                <div class="close-icon">
+                    <i class="fas fa-times"></i>
                 </div>
-            </a>
-            {% endfor %}
-    </section>
-
-
+            </div>
+            <form class="add-form" action="{{ url_for('create_client') }}" method="post" id="addForm">
+                <div class="form-group">
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="client" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Numero de Teléfono:</label>
+                    <input type="tel" id="phone" name="phone" value="" required>
+                </div>
+                <div class="form-group">
+                    <label class="custum-file-upload" for="file">Imagen</label>
+                    <div class="form-group upload-box">
+                        <div class="upload-icon-container">
+                            <i class="fas fa-upload"></i>
+                            <span>Subir archivo</span>
+                            <input type="file" id="file" onchange="previewImage(this)">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <button type="submit" class="submit-btn">Guardar</button>
+                    <button type="reset" class="reset-btn">Restablecer</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <h3 class="preview-title">Previsualización</h3>
+    <div class="preview-section">
+        <div class="preview-card-item"></div>
+            <img id="preview-image" src="" alt="Miniatura">
+            <p> <span id="previewName"></span></p>
+            <p> <span id="previewCompany"></span></p>
+    </div>
+</div>
+<div class="modal-backdrop hidden"></div>
+    <div class="card-list-client">
+        {% for item in cliente %}
+            <div class="card-client">
+                <img src="../static/img/user-default.png" alt="User Image">
+                <p class="default-client-name">{{item[0]}}</p>
+                <p class="client-company">{{item[1]}}</p>
+                <div class="actions">
+                    <div class="delete" style="cursor: pointer;" onclick="showModal('{{ item[2] }}')">
+                        <div id="nfo" value=""></div>
+                        <i class="fas fa-trash-alt" title="Borrar"></i>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="confirmation-modal hidden" id="confirmationModal">
+        <div class="modal-content">
+            <h3>¿Estás seguro de que deseas eliminar?</h3>
+            <p>Esta acción no se puede deshacer.</p>
+            <div class="modal-actions">
+                <button id="confirmDelete" class="confirm-btn">Sí, eliminar</button>
+                <button id="cancelDelete" class="cancel-btn">Cancelar</button>
+            </div>
+        </div>
+    </div>
+    <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
+    <script src="../static/js/clients.js"></script>
    
     <script>
 document.addEventListener('DOMContentLoaded', () => {
