--- a/static/css/flash.css
+++ b/static/css/flash.css
@@ -1,26 +1,14 @@
 .flash-messages {
     padding: 10px;
-    margin: 20px 0;
+    margin: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
 }
 
 .flash-message {
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-}
-
-/* Ejemplos de categorías */
-.flash-message.success {
-    background-color: #d4edda;
-    color: #155724;
-}
-
-.flash-message.error {
-    background-color: #f8d7da;
-    color: #721c24;
-}
-
-.flash-message.warning {
-    background-color: #fff3cd;
-    color: #856404;
+    margin: 5px 0;
+    padding: 5px;
+    border-left: 4px solid #28a745; /* Color verde para mensajes de éxito */
+    color: #333;
 }
