--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios - CopyNato</title>
+    <title>Clientes - CopyNato</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/clients.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
+    <link rel="stylesheet" href="../static/css/flash.css">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -102,7 +103,6 @@
             </div>
         </div>
     </nav>
-
     <section class="home">
         <div class="home-header">
             <div class="text">Clientes</div>
@@ -163,6 +163,15 @@
             <p> <span id="previewCompany"></span></p>
     </div>
 </div>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="flash-messages">
+        {% for message in messages %}
+            <div class="flash-message">{{ message }}</div>
+        {% endfor %}
+    </div>
+{% endif %}
+{% endwith %}
 <div class="modal-backdrop hidden"></div>
     <div class="card-list-client">
         {% for item in cliente %}
