--- a/static/css/main.css
+++ b/static/css/main.css
@@ -909,7 +909,7 @@ body.dark .preview-section .preview-card-item {
 .add-form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .form-group select {
@@ -1136,7 +1136,7 @@ body.dark .custom-checkbox {
     justify-content: center;
     align-items: center;
     width: 60%;
-    padding: 30px;
+    padding: 20px;
     background: white;
     border-radius: 12px;
     /* Bordes más suaves */
@@ -1316,7 +1316,7 @@ body.dark .form-group textarea:focus {
 }
 
 .destination-selects select { /* Permite que cada selector ocupe el mismo espacio */
-    width: 271px; /* Permite que los selectores se reduzcan en tamaño si es necesario */
+    width: 270px; /* Permite que los selectores se reduzcan en tamaño si es necesario */
     margin-right: 10px; /* Espacio entre selectores, excepto el último */
 }
 
@@ -1325,5 +1325,119 @@ body.dark .form-group textarea:focus {
     margin-right: 0; /* Sin margen derecho en el último selector */
 }
 
+/* Estilo general para el dropdown */
+.sort-dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+/* Estilo para las opciones */
+.sort-options {
+    position: absolute;
+    background-color: white; /* Color de fondo del menú */
+    box-shadow: 0 2px 100px rgba(0, 0, 0, 0.103); /* Sombra */
+    z-index: 1; /* Asegúrate de que esté por encima de otros elementos */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 1px 0; /* Espaciado interno */
+}
+
+.sort-option + .sort-option {
+    border-top: 1px solid #e0e0e0; /* Línea divisoria */
+}
+
+/* Inicialmente escondemos las opciones */
+.sort-options.hidden {
+    display: none;
+}
+
+
+
+.sort-option {
+    padding: 10px 30px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    color: #121212;
+    white-space: nowrap;
+}
+
+.sort-btn:hover {
+    color: #756fd6; /* Color del ícono al pasar el mouse */
+}
+
+.sort-btn {
+    background-color: transparent; /* Fondo transparente */
+    color: #76767a; /* Color del ícono */
+    border: none; /* Sin borde */
+    cursor: pointer; /* Mostrar puntero al pasar el mouse */
+    font-size: 24px; /* Tamaño del ícono */
+    transition: color 0.3s ease; /* Transición suave para el color */
+    margin: 6px; /* Agrega margen alrededor del botón */
+    padding: 8px; /* Opcional: añade espaciado interno para mayor área de clic */
+}
+
+body.dark .sort-btn {
+    color: #cccccc;
+}
+
+.floating-buttons {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Oculto inicialmente */
+    flex-direction: column;
+    gap: 10px; /* Espacio entre los botones */
+}
+
+.floating-btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: #695CFE; /* Color del fondo */
+    color: white;
+    font-size: 24px; /* Tamaño del icono */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.floating-btn:hover {
+    transform: scale(1.1); /* Efecto de escala en hover */
+}
+
+/* Para añadir una animación al aparecer */
+.floating-buttons.show {
+    display: flex;
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+.floating-buttons.hide {
+    animation: fadeOut 0.5s forwards; /* `forwards` mantiene el estado final */
+    display: flex; /* Asegúrate de que esté visible mientras se anima */
+}
 
 
